# premiere-session-bootstrap

./: README.md  WORKFLOW.md  pyproject.toml
cep/com.g960059.premiere-bootstrap-probe/: index.html  main.js
cep/com.g960059.premiere-bootstrap-probe/CSXS/: manifest.xml
cep/com.g960059.premiere-bootstrap-probe/jsx/: import-session.jsx  probe-premiere-api.jsx  probe-selection.jsx
docs/: API_FINDINGS.md  LOCAL_PROBE_LOG.md
extendscript/: import-session.jsx  probe-premiere-api.jsx
scripts/: install-cep-probe.sh  install-uxp-probe.sh  install.sh  psb
skills/premiere-session-bootstrap/: SKILL.md
skills/premiere-session-bootstrap/scripts/: install.sh  psb
src/premiere_session_bootstrap/: autogroup.py  cli.py  config.py  fftools.py  reports.py
tests/: test_manifest.py
uxp/premiere-bootstrap-probe/: index.html  main.js  manifest.json
