[project]
name = "premiere-session-bootstrap"
version = "0.1.0"
description = "Premiere Pro session bootstrap experiments for piano multicam workflows"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0.2",
]

[project.scripts]
premiere-session-bootstrap = "premiere_session_bootstrap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/premiere_session_bootstrap"]

